--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>網路攻防實習期中專案</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="margin: 0; padding: 0; width: 100%; height: 100%; box-sizing: border-box;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
